Add profile, settings, two-factor authentication and collapsible sidebar
